--- a/popup.html
+++ b/popup.html
@@ -305,6 +305,9 @@
                             <div class="formula-container">
                                 <span class="prop-data" id="average_rent_formula"></span>
                             </div>
+                            <div class="bed_bath_container" style="display: none;">
+
+                            </div>
                             <div class="increase-rate-container">
                                 <div class="rate-container-heading">
                                     <span>Raise the rent price using percentage</span>
@@ -419,46 +422,50 @@
                                     </div>                                    
                                 </div>
                                 <div class="data-container">
+                                    <div class="api-management">
+                                        <span>Management (<span id="management_percent" class="prop-data"></span>%)</span>
+                                        <span id="management" class="prop-data"></span>
+                                    </div>    
                                     <div class="api-maintenance">
                                         <span>Maintenance (<span id="maintenance_percent" class="prop-data"></span>%)</span>
                                         <span id="maintenance" class="prop-data"></span>
-                                    </div>
+                                    </div> 
+                                </div>
+                                <div class="data-container">
                                     <div class="api-total-monthly-cost">
                                         <span>Total Monthly Cost</span>
                                         <span id="total_monthly_cost" class="prop-data"></span>
                                     </div>                                    
-                                </div>
-                                <div class="data-container">
                                     <div class="api-total-yearly-cost">
                                         <span>Total Yearly Cost</span>
                                         <span id="total_yearly_cost" class="prop-data"></span>
                                     </div>
+                                </div>
+                                <div class="data-container">
                                     <div class="api-monthly-net-operator">
                                         <span>Monthly Net Operator</span>
                                         <span id="monthly_net_operator" class="prop-data"></span>
                                     </div>                                   
-                                </div>
-                                <div class="data-container">
                                     <div class="api-yearly-net-operator">
                                         <span>Yearly Net Operator</span>
                                         <span id="yearly_net_operator" class="prop-data"></span>
                                     </div>
+                                </div>
+                                <div class="data-container">
                                     <div class="api-cap-rate">
                                         <span>Cap Rate</span>
                                         <span id="cap_rate" class="prop-data"></span>
                                     </div>                                
-                                </div>
-                                <div class="data-container">
                                     <div class="api-cashon-cash-return">
                                         <span>Cash on Cash Return</span>
                                         <span id="cash_on_cash_return" class="prop-data"></span>
                                     </div>
+                                </div>
+                                <div class="data-container">
                                     <div class="api-total-cash-flow-monthly">
                                         <span>Total Cash Flow Monthly</span>
                                         <span id="total_cash_flow_monthly" class="prop-data"></span>
                                     </div>                                    
-                                </div>
-                                <div class="data-container">
                                     <div class="api-total-cash-flow-yearly">
                                         <span>Total Cash Flow Yearly</span>
                                         <span id="total_cash_flow_yearly" class="prop-data"></span>
