--- a/popup.html
+++ b/popup.html
@@ -51,6 +51,9 @@
                     </div>
                     <button type="button" class="btn" id="loginBtn">Login</button>
                 </div>
+                <div class="ForgotPasswordLink">
+                    <div class="text">Forgot password? <a href="http://192.168.1.13:8000/forgot_password/" target="_blank" class="forgotLink">Click here</a></div>
+                </div>  
                 <div class="registerFormLink">
                     <div class="text">New here? <a href="#" class="registerLink">Register Now</a></div>
                 </div>  
