--- a/popup.html
+++ b/popup.html
@@ -96,6 +96,15 @@
                     <div class="text">Already have an account? <a href="#" class="loginLink">Login Now</a></div>
                 </div>  
             </form>
+            <div class="terms-of-service-and-privacy-policy d-flex align-items-center justify-content-center my-1">
+                <a href="" id="privacy_policy" target="_blank">
+                    Privacy policy
+                </a>
+                <span class="mx-2">/</span>
+                <a href="" id="terms_of_service" target="_blank">
+                    Terms of service
+                </a>
+            </div>
         </div>
         <div class="realtor-site-screen">
             <div class="site-header">
@@ -162,14 +171,14 @@
 
                             <div class="details-container">
                                     <div class="downpayment">
-                                        <span>Down Payment<em>*</em></span>
+                                        <span>Down Payment<em>*</em> %</span>
                                         <div>
                                             <input type="number" class="form-control req-input req-input-range" name="downpayment_percent" id="downpayment" min="1" max="100">
                                             <div class="error-message">Please enter down payment</div>                                                                                       
                                         </div>
                                     </div>
                                     <div class="closing-cost">
-                                        <span>Closing Cost<em>*</em></span>
+                                        <span>Closing Cost<em>*</em> %</span>
                                         <div>
                                             <input type="number" class="form-control req-input req-input-range" id="closing_cost" name="closing_cost_percent" min="1" max="100">
                                             <div class="error-message">Please enter closing cost</div>
@@ -199,25 +208,25 @@
                             </div>
                             <div class="details-container">
                                     <div class="interest-rate">
-                                        <span>Interest Rate<em>*</em></span>
+                                        <span>Interest Rate<em>*</em> %</span>
                                         <div>
                                             <input type="number" class="form-control req-input req-input-range" name="interest_rate" id="interest_rate" min="1" max="100">
                                             <div class="error-message">Please enter interest rate</div>
                                         </div>
                                     </div>
                                     <div class="vacancy">
-                                        <span>Vacancy<em>*</em></span>
+                                        <span>Vacancy<em>*</em> %</span>
                                         <div>
-                                            <input type="number" class="form-control req-input" min="0" max="100" name="vacancy" id="vacancy" value="0">
+                                            <input type="number" class="form-control req-input" min="0" max="100" name="vacancy" id="vacancy" value="5">
                                             <div class="error-message">Please enter vacancy</div>
                                         </div>
                                     </div>
                             </div>
                             <div class="details-container">
                                     <div class="maintenance">
-                                        <span>Maintenance<em>*</em></span>
+                                        <span>Maintenance<em>*</em> %</span>
                                         <div>
-                                            <input type="number" class="form-control req-input" min="0" max="100" name="maintenance" id="maintenance" value="0">
+                                            <input type="number" class="form-control req-input" min="0" max="100" name="maintenance" id="maintenance" value="5">
                                             <div class="error-message">Please enter maintenance</div>
                                         </div>
                                     </div>
@@ -266,9 +275,9 @@
                                         </div>
                                     </div>
                                     <div class="management">
-                                        <span>Management<em>*</em></span>
+                                        <span>Management<em>*</em> %</span>
                                         <div>
-                                            <input type="number" class="form-control req-input" min="0" max="100" name="management" id="management" value="0">
+                                            <input type="number" class="form-control req-input" min="0" max="100" name="management" id="management" value="5">
                                             <div class="error-message">Please enter management</div>
                                         </div>
                                     </div>
