add bedroom bathroom

--- a/popup.html
+++ b/popup.html
@@ -252,7 +252,7 @@
                                     </div>
                                 </div>
                                 <div class="bathrooms">
-                                    <div class="d-flex justify-content-between align-items-end" id="bed_button_container">
+                                    <div class="d-flex justify-content-between align-items-center" id="bed_button_container">
                                         <span>Bathrooms<em>*</em></span>
                                         <div class="arrow_container">
                                             <div class="down_arrow" style="display: none;">
