--- a/popup.html
+++ b/popup.html
@@ -52,7 +52,7 @@
                     <button type="button" class="btn" id="loginBtn">Login</button>
                 </div>
                 <div class="ForgotPasswordLink my-1">
-                    <div class="text">Forgot password? <a href="" target="_blank" class="forgotLink">Click here</a></div>
+                    <div class="text"><a href="" target="_blank" class="forgotLink">Forgot password?</a></div>
                 </div>  
                 <div class="registerFormLink">
                     <div class="text">New here? <a href="#" class="registerLink">Register Now</a></div>
