--- a/popup.html
+++ b/popup.html
@@ -363,12 +363,12 @@
                                     <span>Select Average Rent or Highest Rent</span>
                                 </div>
                                 <div class="all-data-container">
-                                    <div class="data-container multi_unit_container" style="display: none;">
+                                    <section class="data-container multi_unit_container" style="display: none;">
     
-                                    </div>
+                                    </section>
                                     <div class="api-average-rent">
                                         <button class="recall-api recall-api-default position-relative" data-rentoption="average_rent" data-rentvalue="0">
-                                            <span class="d-block">Unit <span id="unit_count_average">1</span></span>
+                                            <span class="d-block">Unit <span class="unit_count_average" id="unit_count_average">1</span></span>
                                             <span id="rent_increase_rate" style="color: green!important; font-size: 18px; position: absolute; top: 0; right: 0; font-family: Raleway, sans-serif; font-weight: 700;"></span>
                                             <span id="average_rent_text">Average Rent</span>
                                             <span id="increase_rent_text" style="display: none;">Rent Increase</span>
