--- a/popup.html
+++ b/popup.html
@@ -359,9 +359,9 @@
                             </div>
                             <div class="error-message rate-error"></div>
                             <div class="api-data">
-                                <div id="select_average_highest">
+                                <!-- <div id="select_average_highest">
                                     <span>Select Average Rent or Highest Rent</span>
-                                </div>
+                                </div> -->
                                 <div class="all-data-container">
                                     <section class="data-container multi_unit_container" style="display: none;">
     
