--- a/popup.html
+++ b/popup.html
@@ -366,13 +366,13 @@
                                     <section class="data-container multi_unit_container" style="display: none;">
     
                                     </section>
-                                    <div class="api-average-rent">
+                                    <div class="api-average-rent" id="api-average-rent">
                                         <button class="recall-api recall-api-default position-relative" data-rentoption="average_rent" data-rentvalue="0">
-                                            <span class="d-block">Unit <span class="unit_count_average" id="unit_count_average">1</span></span>
-                                            <span id="rent_increase_rate" style="color: green!important; font-size: 18px; position: absolute; top: 0; right: 0; font-family: Raleway, sans-serif; font-weight: 700;"></span>
-                                            <span id="average_rent_text">Average Rent</span>
-                                            <span id="increase_rent_text" style="display: none;">Rent Increase</span>
-                                            <span id="average_rent" class="prop-data"></span>
+                                            <span class="d-block">Unit <span class="unit_count_average" id="unit_count_average1">1</span></span>
+                                            <span id="rent_increase_rate1" style="color: green!important; font-size: 18px; position: absolute; top: 0; right: 0; font-family: Raleway, sans-serif; font-weight: 700;"></span>
+                                            <span id="average_rent_text1">Average Rent</span>
+                                            <span id="increase_rent_text1" style="display: none;">Rent Increase</span>
+                                            <span id="average_rent1" class="prop-data"></span>
                                         </button>
                                     </div>
                                     <!-- <div class="api-highest-rent">
