design for unit block

--- a/popup.html
+++ b/popup.html
@@ -369,7 +369,7 @@
                                     <div class="api-average-rent" id="api-average-rent">
                                         <button class="recall-api recall-api-default position-relative" data-rentoption="average_rent" data-rentvalue="0">
                                             <span class="d-block">Unit <span class="unit_count_average" id="unit_count_average1">1</span></span>
-                                            <span id="rent_increase_rate1" style="color: green!important; font-size: 18px; position: absolute; top: 0; right: 0; font-family: Raleway, sans-serif; font-weight: 700;"></span>
+                                            <span id="rent_increase_rate1" style="color: green!important; font-size: 18px; position: absolute; top: 5px; right: 5px; font-family: Raleway, sans-serif; font-weight: 700;"></span>
                                             <span id="average_rent_text1">Average Rent</span>
                                             <span id="increase_rent_text1" style="display: none;">Rent Increase</span>
                                             <span id="average_rent1" class="prop-data"></span>
