add (%) website list block remove add data word instead matrix

--- a/popup.html
+++ b/popup.html
@@ -120,16 +120,6 @@
                         <img src="./assets/images/realtorLogo.png" alt="realtorLogo">
                     </span>
                 </a>
-                <a href="https://www.realtor.com/" target="_blank">
-                    <span class="site-log">
-                        <img src="./assets/images/realtorLogo.png" alt="realtorLogo">
-                    </span>
-                </a>
-                <a href="https://www.realtor.com/" target="_blank">
-                    <span class="site-log">
-                        <img src="./assets/images/realtorLogo.png" alt="realtorLogo">
-                    </span>
-                </a>
             </div>
             <div class="site-message">
                 <h2>No Property</h2>
@@ -174,14 +164,14 @@
 
                             <div class="details-container">
                                     <div class="downpayment">
-                                        <span>Down Payment<em>*</em> %</span>
+                                        <span>Down Payment<em>*</em> (%)</span>
                                         <div>
                                             <input type="number" class="form-control req-input req-input-range" name="downpayment_percent" id="downpayment" min="1" max="100">
                                             <div class="error-message">Please enter down payment</div>                                                                                       
                                         </div>
                                     </div>
                                     <div class="closing-cost">
-                                        <span>Closing Cost<em>*</em> %</span>
+                                        <span>Closing Cost<em>*</em> (%)</span>
                                         <div>
                                             <input type="number" class="form-control req-input req-input-range" id="closing_cost" name="closing_cost_percent" min="1" max="100">
                                             <div class="error-message">Please enter closing cost</div>
@@ -211,14 +201,14 @@
                             </div>
                             <div class="details-container">
                                     <div class="interest-rate">
-                                        <span>Interest Rate<em>*</em> %</span>
+                                        <span>Interest Rate<em>*</em> (%)</span>
                                         <div>
                                             <input type="number" class="form-control req-input req-input-range" name="interest_rate" id="interest_rate" min="1" max="100">
                                             <div class="error-message">Please enter interest rate</div>
                                         </div>
                                     </div>
                                     <div class="vacancy">
-                                        <span>Vacancy<em>*</em> %</span>
+                                        <span>Vacancy<em>*</em> (%)</span>
                                         <div>
                                             <input type="number" class="form-control req-input" min="0" max="100" name="vacancy" id="vacancy" value="5">
                                             <div class="error-message">Please enter vacancy</div>
@@ -227,7 +217,7 @@
                             </div>
                             <div class="details-container">
                                     <div class="maintenance">
-                                        <span>Maintenance<em>*</em> %</span>
+                                        <span>Maintenance<em>*</em> (%)</span>
                                         <div>
                                             <input type="number" class="form-control req-input" min="0" max="100" name="maintenance" id="maintenance" value="5">
                                             <div class="error-message">Please enter maintenance</div>
@@ -278,7 +268,7 @@
                                         </div>
                                     </div>
                                     <div class="management">
-                                        <span>Management<em>*</em> %</span>
+                                        <span>Management<em>*</em> (%)</span>
                                         <div>
                                             <input type="number" class="form-control req-input" min="0" max="100" name="management" id="management" value="5">
                                             <div class="error-message">Please enter management</div>
@@ -353,7 +343,7 @@
                                 </div>
                             </div>
                             <div class="increase-rate-container-heading">
-                                <h2>Property Matrix</span>
+                                <h2>Property Data</span>
                                 <!-- <span id="rate_container_city"></span>
                                 <span id="rate_container_state"></span> -->
                             </div>
