--- a/popup.html
+++ b/popup.html
@@ -124,6 +124,7 @@
             <div class="site-message">
                 <h2>No Property</h2>
                 <span>Please select any property to Evaluate</span>
+                <img src="./assets/images/propertysearchtutorial.gif" alt="realtorLogo">
             </div>
         </div>
         <div class="prop-details-spinner text-center d-none">
